frontend/test/should_pass/cast_003.grg
using attrib_model_001, enum_model_001;

rule r {
	pattern{
		ni: NINT;
		nf: NFLOAT;
		nd: NDOUBLE;
		ns: NSTRING;
		nb: NBOOL;
		k: A;
	}
	modify {
		eval {
			ni.a = (int)(int)(float)(int) k.e;
			ns.a = (string) (int) (float) nd.a;
			nd.a = +(int) -(float) nd.a;
			nd.a = +(int) -( -(float)nd.a );
			nd.a = - (int) - (int) + nd.a;

			nd.a = - (int) - - (int) - + (double) - nd.a;
			nd.a = - (int) - + - (int) - + - (double) - nd.a;
		}
	}
}

